improve the html accessibility

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
   <link rel="stylesheet" href="index.css">
-  <script src="https://kit.fontawesome.com/6d02cd93b6.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container1">
@@ -17,11 +16,12 @@
   <img src="./images/logo.svg" alt="logo">
   </div>
   <div class="mock">
-  <img src="./images/illustration-mockups.svg">
+  <img src="./images/illustration-mockups.svg" alt="mockup">
   </div>
   </div>
+
   <div class="text">
-  <div class="title">Build The Community Your Fans Will Love</div>
+  <header class="title">Build The Community Your Fans Will Love</header>
 
   <p class="para">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
   Create connections with your users as you engage in genuine discussion. </p>
